test/fixtures/errors/require-entry-point.js
require("./require-entry-point");
require("./entry-point");
require("./entry-point2");